# Image-Classification-504

./: .gitignore  CNN_Training.ipynb  LICENSE  MSADS_504_Final_Project.ipynb  README.md  main.py  pyproject.toml  test.ipynb
config/: paths.py
data/arrays/test/: image_00000.npy  image_00001.npy  image_00002.npy  image_00003.npy  image_00004.npy  image_00005.npy  image_00006.npy  image_00007.npy  image_00008.npy  image_00009.npy  image_00010.npy  image_00011.npy  image_00012.npy  image_00013.npy  image_00014.npy  image_00015.npy  image_00016.npy  image_00017.npy  image_00018.npy  image_00019.npy  image_00020.npy  image_00021.npy  image_00022.npy  image_00023.npy  image_00024.npy  image_00025.npy  image_00026.npy  image_00027.npy  image_00028.npy  image_00029.npy  image_00030.npy  image_00031.npy  image_00032.npy  image_00033.npy  image_00034.npy  image_00035.npy  image_00036.npy  image_00037.npy  image_00038.npy  image_00039.npy  (+1460 more)
data/arrays/validation/: image_00000.npy  image_00001.npy  image_00002.npy  image_00003.npy  image_00004.npy  image_00005.npy  image_00006.npy  image_00007.npy  image_00008.npy  image_00009.npy  image_00010.npy  image_00011.npy  image_00012.npy  image_00013.npy  image_00014.npy  (+1484 more)
data/metadata/: test_metadata.parquet  train_metadata.parquet  validation_metadata.parquet
features/glcm/: test_glcm.parquet  train_glcm.parquet  validation_glcm.parquet
features/hog/: test_hog.parquet  validation_hog.parquet
utils/: __init__.py  color_histograms.py  color_metadata.py  conversion.py  gray_edges_metadata.py  hsv.py  load_data.py  read_image.py
