[project]
name = "ads504-final"
version = "0.1.0"
description = "Detecting AI-generated images from real photographs using classical ML and deep learning approaches."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "fastparquet>=2025.12.0",
    "huggingface-hub>=0.28.0",
    "keras-tuner>=1.4.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.0",
    "pandas>=3.0.0",
    "pillow>=12.1.1",
    "pyarrow>=23.0.0",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "tensorflow>=2.20.0",
]
authors = [
    { name = "Taylor Kirk", email = "tkirk@sandiego.edu" },
    { name = "Tommy Baron", email = "tbarron@sandiego.edu" },
    { name = "Paola Rodriguez", email = "prodriguez2@sandiego.edu" },
]
